Added extra notes to probability basics notes

--- a/mathematics/statistics/01.probability/01.basics.md
+++ b/mathematics/statistics/01.probability/01.basics.md
@@ -99,21 +99,15 @@ $$
 p(R_i=a,R_k=b,\cdots R_l=c|R_w=f,R_x=g,\cdots R_z=h) \tag{3}
 $$
 
-
-
 #### Conditional vs Joint Probability
 
 The main difference between conditional $p(Y=10|X=1)$ and joint probability $p(X=1,Y=10)$ is that in joint probability, we check the occurance of both $X=1$ and $Y = 10$ out of all the occurances we have observed in a given set of experiments. Whereas in case of conditional probability we try to find $p(Y=10)$ out of all the occurances of $X=1$ i.e. first we filter out the cases where $X=1$ and then we find the probability of $Y=10$ out of these occurances.  
-
-
 
 ### Probability Distribution
 
 Probability distributon is just another fancy way of representing the probabilities of each of the outcomes of a random variable. Here in place of numerically stating the probability of each and every single outcome of an experiment, we denote it using either a bar chart or a function.
 
 This representation is often helpful in understanding and performing various numerical operations on the random variable. 
-
-
 
 ### Basic Rules of Probability
 
@@ -151,8 +145,6 @@ p(R_i=a,R_k=b,\cdots|R_w=f,R_x=g,\cdots) = \\
 p(R_i=a,R_k=b,\cdots,R_w=f,R_x=g,\cdots)\times p(R_w=f,R_x=g,\cdots) 
 $$
 
-
-
 ### Bayes Theorem
 
 Bayes Theorem derives from the same concept of product rule, just a bit rearranged:
@@ -163,9 +155,13 @@ $$
 P(Y|X) = \frac{p(X|Y)p(Y)}{p(X)}
 $$
 
-
-
 ## Note
+
+Here we have considered 10 experiments and a distributon according to that in our examples. The actual distribution of the above example is not the same as the 10 experimental distribution. The actual probabilities of each outcome for the 1st dice is $\frac{1}{6}$ and for the 2nd dice is $\frac{1}{12}$ but we didnt consider this. 
+
+Refer to **Population vs Sample space** notes for the reason.
+
+ 
 
 # Reference
 
