Corrected some mistakes in the notes

--- a/mathematics/statistics/01.probability/01.basics.md
+++ b/mathematics/statistics/01.probability/01.basics.md
@@ -16,7 +16,7 @@ And thus we can also consider a generalized scenario where we have multiple dice
 
 Here the rolling of 1 dice doesnt affect the outcome of the rolling of another dice. As a result we roll both the dice in any order and in any way, i.e. rolling 1 dice before the another or at the same time will always result in the same outcome. Thus we can say that the activity of rolling the dices are **mutually exclusive**.
 
-### Random Variable and Experiment
+### Random Variable, Events and Experiment
 
 When we roll both the dices, we get 2 outcomes:
 
@@ -29,7 +29,7 @@ Here $X$ can have the values 1,2,3,...,6 and $Y$ can have the value 1,2,3,...,12
 
 In Probability and statistics we say that the variable $X$ can **take** 6 values in the range(1,6) and variable $Y$ can **take** values in the range(1,12). 
 
-The activity of rolling both the dice once is called an **experiment** and these variables $X,Y$ are called the **random variable** as the denote the random outcome of the experiment. 
+The activity of rolling both the dice once is called an **event**, and a collection of such events is called as an **experiment**. These variables $X,Y$ are called the **random variable** as they denote the random outcome of each event in the experiment.
 
 Similarly for the generalized example $R_1, R_2,\cdots R_n$ are the random variables.
 
@@ -160,8 +160,6 @@ $$
 Here we have considered 10 experiments and a distributon according to that in our examples. The actual distribution of the above example is not the same as the 10 experimental distribution. The actual probabilities of each outcome for the 1st dice is $\frac{1}{6}$ and for the 2nd dice is $\frac{1}{12}$ but we didnt consider this. 
 
 Refer to **Population vs Sample space** notes for the reason.
-
- 
 
 # Reference
 
