[DNN]:Activation Functions

--- a/supervised_learning/systematic_notes/deep_neural_networks/01.modules.md
+++ b/supervised_learning/systematic_notes/deep_neural_networks/01.modules.md
@@ -4,7 +4,7 @@ A neural network architecture contains multiple modules which together makes up 
 
 The following are the neural network modules:
 
-- Node
+- Node or Perceptron
 
 - Architecture or Node connection layout
   
@@ -16,7 +16,7 @@ The following are the neural network modules:
 
 - Optimization Function
 
-## 1. Node or Neuron
+## 1. Node or Perceptron
 
 This is the basic building block of  a neural network model. It acts as a data holder for each layer when we are training a neural network model. The node structure changes for different architectures.
 
@@ -26,11 +26,11 @@ A basic node models comprises of 2 parts:
 
 - Activation: The data we get after applying an activation function on the the data received from previous layer.
 
-The neuron is what makes Neural Network different from a standard machine learning model. The activation function in the neuron brings a kind of non-linearity into the data , thus able to grasp and capture complex patterns present in the data.
+The perceptron is what makes Neural Network different from a standard machine learning model. The activation function in the perceptron brings a kind of non-linearity into the data , thus able to grasp and capture complex patterns present in the data.
 
 ### 2. Architecture
 
-As said earlier, the node changes with respect to the architecture we are using. An artificial neural network uses a basic neuron whereas a Convolution Neural Network uses convolution nodes.
+As said earlier, the node changes with respect to the architecture we are using. An artificial neural network uses a basic perceptron whereas a Convolution Neural Network uses convolution nodes.
 
 ### 2.A. Operations
 
