--- a/supervised_learning/systematic_notes/deep_neural_networks/02.parameters_and_hyperparameters.md
+++ b/supervised_learning/systematic_notes/deep_neural_networks/02.parameters_and_hyperparameters.md
@@ -18,6 +18,10 @@ eg:
 
 - CNN: The parameters are called *filters* and it like weights depends on the input dimensions(whether input images are RGB or just Black and White) and   the number of layers in model.
 
+- Batch Size: The number of data points of the dataset that will be fed during feed forward process.
+
+- Epochs: The number of times the model will train on the same dataset in succession.
+
 The number of hyperparameters and its forms depend on the loss function, optimization algorithm we choose.
 
 eg:
@@ -26,6 +30,4 @@ eg:
 
 - Regularization hyperparameter($\lambda$): We introduce the process of regularization to inhibit overfitting of data. The extent of this process is controlled by the hyperparameter $\lambda$.
 
-----
-
-
+---
