--- a/supervised_learning/systematic_notes/deep_neural_networks/04.activation_fn.md
+++ b/supervised_learning/systematic_notes/deep_neural_networks/04.activation_fn.md
@@ -47,7 +47,7 @@ The whole function if not differentiable, its fine as long as it is differentiab
 <img src='assets/sigmoid.webp' />
 
 $$
-f(x) = \frac{1}{1 + e^x}
+f(x) = \frac{1}{1 + e^{-x}}
 $$
 
 As we can see in the graph that the output of the function always lies in the range [0, 1] for all the input values.
@@ -68,8 +68,6 @@ Disadvantages:
 
 - **Slow convergence**: Due to vanishing gradients, the gradients for extreme values of x are very close to 0, thus the node doesnt converge to a proper value in less itterations.
 
-
-
 #### 3. Tanh function
 
 <img src='assets/tanh1.webp'/>
@@ -77,7 +75,7 @@ Disadvantages:
 $$
 \begin{aligned}
 tanh(x) & = 2 \times sigmoid(2x) - 1 \\
-& = \frac{e^x - e^x}{e^x + e^x}
+& = \frac{2}{1 + e^{-2x}}-1
 \end{aligned}
 $$
 
@@ -96,8 +94,6 @@ Disadvantages:
 - **Vanishing Gradients**
 
 - **Slow convergence**
-
-
 
 #### 4. ReLU
 
@@ -167,8 +163,6 @@ This function solves the issues of differentiation with leaky and regular relu a
 
 > Note: here we are use $a$ as a hyperparameter rather than providing a hardcoded constant.   
 
-
-
 #### 7. Softmax
 
 <img src='assets/softmax.png' />
@@ -184,8 +178,6 @@ Advantages:
 - Can handle multiple classes: i.e. the concept of class was not present in other activation functions, thus they can only predict values for 1 class.
 
 - Mainly useful for classification in output neurons.
-
-
 
 ## How to choose Activation Functions?
 
@@ -205,8 +197,6 @@ Advantages:
 
 - Output for regression problems can have a linear activation function
 
-
-
 # Reference
 
 [1]: https://medium.com/@snaily16/what-why-and-which-activation-functions-b2bf748c0441
@@ -214,5 +204,3 @@ Advantages:
 [2]: https://www.analyticsvidhya.com/blog/2020/01/fundamentals-deep-learning-activation-functions-when-to-use-them/ [Activation Functions | Fundamentals Of Deep Learning]
 
 [3]: https://towardsdatascience.com/activation-functions-neural-networks-1cbd9f8d91d6
-
-
