[DNN]:rectified cost and loss function definitions

--- a/supervised_learning/systematic_notes/deep_neural_networks/01.modules.md
+++ b/supervised_learning/systematic_notes/deep_neural_networks/01.modules.md
@@ -52,8 +52,20 @@ Using the operations defined by the architecture, it then dictates how the data 
 
 The loss function tells us about the degree of difference between our predicted value and the actual value. This helps us in updating the parameters(aka weights). The more the degree of difference, the more aggressively we change the parameters, the lesser the difference the less we change the parameters.
 
+#### 3.A. Cost function
+
+In most cases we will use loss function and cost function interchangeably but it is important to note the difference between them.
+
+> Loss function only tells us the extent to which our model's prediction was wrong. The higher the loss function, the more the model needs to adjust its weights to get a correct prediction. 
+
+> Where as this is fine for 1 data point, but when we are performing the optimization we might be looking are 1 or more examples at the same time. In such situations, we define the cost function.
+
+Cost function can be either equal to the loss function directly, or it can be an average of loss function over many data points or some constant or variable multiplied with the loss function to aid calculations or performance.
+
 ### 4. Optimization
 
-Optimization algorithms lays down the steps that is needed to performed to accurately update our model's parameters. It takes into consideration different information before updating the parameters. One of the key information used is the value returned by the loss function. Based on the loss function's calculations the optimization algorithm changes the parameters.
+Optimization algorithms lays down the steps that is needed to performed to accurately update our model's parameters. It takes into consideration different information before updating the parameters. One of the key information used is the value returned by the cost function(note: not the loss function). Based on the loss function's calculations the optimization algorithm changes the parameters.
 
 ----
+
+
