[DNN]:Xavier initialization

--- a/supervised_learning/systematic_notes/deep_neural_networks/06.B.basic_issues.md
+++ b/supervised_learning/systematic_notes/deep_neural_networks/06.B.basic_issues.md
@@ -58,37 +58,30 @@ Another issue that haunts a neural network performance is the symmetry of weight
 
 This can be resolved by using a random variable to sample values to initialize the weights or some other methods to assign differentiating weights for each unit.
 
-#### Xavier Initialization
 
-If we look closely at the weights and how it affects the output, we can see that,
 
-for layer $i$ with $n_{in}$ number of units and $j$ representing each unit:
+### Xavier Initialization
+
+If we use a random variable to sample the weight initialization, we can observe that the randomly initialized weights modify the variance as a result of which the actual variance in the data is not propagated to the output and back properly. If we calculate the variance of 1 layer we can see that, for layer $i$ with $n_{in}$ number of units and $j$ representing each unit:
 
 $$
 o_i = \sum_j^{n_{in}} x_i * w_{ij}
 $$
 
-
-
 $$
 \begin{aligned}
-E[output_i] &= \sum_j^{n_{in}} E[x_j * w_{ij}] &\text{ [where j is the number of nodes in layer i]} \\
-&= \sum E[x_j]E[w_{ij}]
-\end{aligned}
-$$
-
-If we consider that we normalized the input i.e. $E[X] = 0$ we can say that $E[o_i] = 0$ 
-
-Similarly for variance:
-
-$$
-\begin{aligned}
-Var[output_i] &= E[output_i^2] - E[output_i]^2 \\
+Var[o_i] &= E[output_i^2] - E[output_i]^2 \\
 &= \sum_j^{n_{in}} E[x_i^2 * w_{ij}^2] - 0 \\
 &= \sum E[x_i^2]E[w_{ij}^2] \\
 &= n_{in} \gamma^2 \sigma^2
 \end{aligned}
 $$
+
+Assumptions
+
+- E[X] = 0 i.e. we have normalized the input to have 0 mean
+
+- $E[w_{i}] = 0$ i.e. we have chosen the weights from a distribution whose mean is 0
 
 Where 
 
@@ -96,27 +89,39 @@ Where
 
 - $\gamma^2$ is the variance of the input
 
-- $\sigma^2$ is the variance of the output at layer $i$  [given that we have 0 mean for weights as well]
+- $\sigma^2$ is the variance of the output at layer $i$ 
 
 As we can see that if we don't control the variance of the weights, it can blow up and cause gradient explosion.
 
-A simple way to control the gradient is to make sure that $n_{in}\sigma^2 = 1$
+> Another thing to note here is that by just using a 0 mean and unit variance weight distribution actually doesn't help us, as the $n_{in}$ also affects the variance of the output of each layer.
 
-Similarly when we are backpropagating we get the term $n_{out}\sigma^2$ and so if again if we don't control the variance, we might end up with gradient explosion. Similarly to control this we can make sure that $n_{out}\sigma^2 = 1$
+So for us to be able to propagate the variance of the input to the output node without introducing other factors by our model, we need to control the variance of the weights as well.
 
-In all these cases we are not considering the variance of input as that we can control it using normalization. 
+A simple way to control the variance is to make sure that $n_{in}\sigma^2 = 1$
 
-This is where the Xavier Initialization comes into picture. It tries to control the variance by maintaining the fact that $\frac{1}{2}(n_{in} + n+{out})\sigma^2 = 1$.
+But when we are backpropagating we get the term $n_{out}\sigma^2$ and so again if we don't control the variance, we might either end up gradient explosion or a modified variance. 
 
-This ensures that gradient explosion doesn't occur by taking the average of both the variances during forward propagation and backward propagation. This gives us the equation:(if we rearrange the above average)
+Similarly to control this we can make sure that $n_{out}\sigma^2 = 1$
+
+But we can't satisfy both the conditions simultaneously.
+
+This is where the Xavier Initialization comes into picture. It tries to control the variance introduced by our model by maintaining the fact that the average of both the equation is satisfied as a middle ground, i.e.
+
+$$
+\frac{1}{2}(n_{in} + n+{out})\sigma^2 = 1
+$$
+
+This ensures that neither the gradient explosion occurs nor the modification introduced is significantly high. This gives us the equation:(if we rearrange the above average)
 
 $$
 \sigma = \sqrt{\frac{2}{n_{in}+n_{out}}}
 $$
 
-By maintaining the variance of the weights in this manner we overcome all the issues.
+By maintaining the variance of the weights in this manner we overcome both the issues.
 
 > Note: Here we didn't consider that the input is using Gaussian distribution. So we can use any distribution as long as we maintain this distribution's  mean as 0 and variance as stated above.
+
+
 
 
 
